--- a/frontend/go_chat/pubspec.yaml
+++ b/frontend/go_chat/pubspec.yaml
@@ -51,6 +51,10 @@ dependencies:
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
 
+  # Desktop notifications
+  local_notifier: ^0.1.6
+  window_manager: ^0.4.3
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
