--- a/frontend/go_chat/web/manifest.json
+++ b/frontend/go_chat/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "go_chat",
-    "short_name": "go_chat",
+    "name": "Go Chat",
+    "short_name": "Go Chat",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
