--- a/frontend/go_chat/windows/runner/Runner.rc
+++ b/frontend/go_chat/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "go_chat" "\0"
+            VALUE "FileDescription", "Go Chat" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "go_chat" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2026 com.example. All rights reserved." "\0"
             VALUE "OriginalFilename", "go_chat.exe" "\0"
-            VALUE "ProductName", "go_chat" "\0"
+            VALUE "ProductName", "Go Chat" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
