--- a/frontend/go_chat/pubspec.yaml
+++ b/frontend/go_chat/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
 
+  # Environment
+  flutter_dotenv: ^5.1.0
+
   # Desktop notifications
   local_notifier: ^0.1.6
   window_manager: ^0.4.3
@@ -90,6 +93,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
+    - .env
     - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
