--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,8 +3,8 @@ PORT=8080
 
 # Database
 DB_HOST=localhost
-DB_USER=dbuser
-DB_PASSWORD=dbpassword
+DB_USER=postgres
+DB_PASSWORD=postgres
 DB_NAME=chatapp
 DB_PORT=5432
 
